--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,24 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <style>
+    #centro {
+      position:absolute;
+      top:50%;
+      left:50%;
+      margin-top:-50px;
+      margin-left:-50px;
+    }
+  </style>
 </head>
 
 <body class="hold-transition skin-red layout-top-nav">
 
-    <mt-app>Loading...</mt-app>
+    <mt-app>
+      <i class="fa fa-circle-o-notch fa-spin fa-3x fa-fw" id="centro"></i>
+      <!-- <span class="sr-only">Loading...</span> -->
+    </mt-app>
 
 </body>
 </html>
